--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,6 +17,7 @@
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
 <!--
