[svn r19] Warnings from the compiler are enabled.
--HG--
branch : src

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,6 +18,7 @@
                     <source>1.5</source>
                     <target>1.5</target>
                     <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
 <!--
