--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>BetterBeansBinding</artifactId>
     <packaging>jar</packaging>
     <version>1.2.2-SNAPSHOT</version>
-    <name>BetterBeansBinding</name>
+    <name>BetterBeansBinding Core</name>
     <url>http://maven.apache.org</url>
 
     <build>
@@ -21,23 +21,26 @@
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
-<!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.2</version>
                 <configuration>
+                    <formats>
+                        <format>xml</format>
+                    </formats>
                     <instrumentation>
                     </instrumentation>
                 </configuration>
                 <executions>
                     <execution>
+                        <phase>package</phase>
                         <goals>
-                            <goal>clean</goal>
+                            <goal>cobertura</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
--->
         </plugins>
     </build>
 
