--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jdesktop.betterbeansbinding.parent</groupId>
     <artifactId>BetterBeansBinding</artifactId>
     <packaging>pom</packaging>
     <version>1.2.2-SNAPSHOT</version>
+    <name>BetterBeansBinding</name>
 
         <modules>
                 <module>core</module>
