--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,12 +15,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
+                    <debug>on</debug>
                     <source>1.5</source>
                     <target>1.5</target>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
+<!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -42,6 +44,7 @@
                     </execution>
                 </executions>
             </plugin>
+-->
         </plugins>
     </build>
 
@@ -53,9 +56,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-<!--
     <reporting>
         <plugins>
+<!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -67,6 +70,7 @@
                     </formats>
                 </configuration>
             </plugin>
+-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -82,5 +86,4 @@
             </plugin>
         </plugins>
     </reporting>
--->
 </project>
