[svn r44] [maven-release-plugin] prepare release BetterBeansBinding-1.2.2
--HG--
branch : src

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 43 2009-04-25 19:42:13Z fabriziogiudici $
+ * $Id: pom.xml 44 2009-04-25 19:42:46Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -33,7 +33,7 @@
     <groupId>org.jdesktop.betterbeansbinding</groupId>
     <artifactId>BetterBeansBinding</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.2.2</version>
     <name>BetterBeansBinding Core</name>
     <url>http://betterbeansbinding.kenai.com</url>
     <description>Keeping JavaBeans in sync.</description>
