--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 44 2009-04-25 19:42:46Z fabriziogiudici $
+ * $Id: pom.xml 46 2009-04-25 19:43:11Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -33,7 +33,7 @@
     <groupId>org.jdesktop.betterbeansbinding</groupId>
     <artifactId>BetterBeansBinding</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.2</version>
+    <version>1.2.3-SNAPSHOT</version>
     <name>BetterBeansBinding Core</name>
     <url>http://betterbeansbinding.kenai.com</url>
     <description>Keeping JavaBeans in sync.</description>
@@ -49,7 +49,6 @@
     <scm>
         <connection>scm:svn:http://kenai.com/svn/betterbeansbinding~svn/tags/BetterBeansBinding-1.2.2</connection>
         <developerConnection>scm:svn:https://kenai.com/svn/betterbeansbinding~svn/tags/BetterBeansBinding-1.2.2</developerConnection>
-        <tag>HEAD</tag>
         <url>https://kenai.com/svn/betterbeansbinding~svn/tags/BetterBeansBinding-1.2.2</url>
     </scm>
     <contributors>
