--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -40,43 +40,14 @@
         <version>1.2.3-SNAPSHOT</version>
     </parent>
     
-    <artifactId>BetterBeansBinding-jar</artifactId>
+    <artifactId>BetterBeansBinding-SwingBinding</artifactId>
     <packaging>jar</packaging>
     <version>1.2.3-SNAPSHOT</version>
-    <name>BetterBeansBinding Jar</name>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
+    <name>BetterBeansBinding SwingBinding</name>
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
             <artifactId>BetterBeansBinding-core</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-EL</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-SwingBinding</artifactId>
             <version>1.2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
