--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 49 2009-04-25 22:31:22Z fabriziogiudici $
+ * $Id: pom.xml 50 2009-04-25 22:47:38Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -181,6 +181,7 @@
     <modules>
         <module>core</module>
         <module>EL</module>
+        <module>SwingBinding</module>
         <module>jar</module>
     </modules>
 
