--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 56 2009-04-26 13:17:03Z fabriziogiudici $
+ * $Id: pom.xml 57 2009-04-26 14:08:23Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -187,6 +187,7 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
+                    <targetJdk>1.5</targetJdk>  
                 </configuration>
             </plugin>
 
@@ -195,6 +196,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                     <!-- configLocation>checkstyle.xml</configLocation -->
                 </configuration>
             </plugin>
 
