[svn r64] Trying a fix for BETTERBEANSBINDING-11.
--HG--
branch : src

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 49 2009-04-25 22:31:22Z fabriziogiudici $
+ * $Id: pom.xml 64 2009-06-11 20:47:20Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -51,4 +51,12 @@
             <version>1.2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
