--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 64 2009-06-11 20:47:20Z fabriziogiudici $
+ * $Id: pom.xml 65 2009-06-12 06:45:27Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -50,6 +50,11 @@
             <artifactId>BetterBeansBinding-EL</artifactId>
             <version>1.2.3-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>1.3.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -60,3 +65,4 @@
         </plugins>
     </build>
 </project>
+
