--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 64 2009-06-11 20:47:20Z fabriziogiudici $
+ * $Id: pom.xml 69 2009-06-12 17:36:45Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -37,12 +37,11 @@
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
         <artifactId>BetterBeansBinding</artifactId>
-        <version>1.2.3-SNAPSHOT</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
-    
+    <version>1.3.0-SNAPSHOT</version>
     <artifactId>BetterBeansBinding-EL</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.3-SNAPSHOT</version>
     <name>BetterBeansBinding EL</name>
 
     <build>
@@ -51,7 +50,15 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-    
 </project>
+
