--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 65 2009-06-12 06:45:27Z fabriziogiudici $
+ * $Id: pom.xml 69 2009-06-12 17:36:45Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -37,18 +37,18 @@
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
         <artifactId>BetterBeansBinding</artifactId>
-        <version>1.2.3-SNAPSHOT</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
     
     <artifactId>BetterBeansBinding-SwingBinding</artifactId>
+    <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <version>1.2.3-SNAPSHOT</version>
     <name>BetterBeansBinding SwingBinding</name>
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
             <artifactId>BetterBeansBinding-core</artifactId>
-            <version>1.2.3-SNAPSHOT</version>
+            <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
@@ -63,8 +63,16 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
 </project>
+
 
