--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 65 2009-06-12 06:45:27Z fabriziogiudici $
+ * $Id: pom.xml 69 2009-06-12 17:36:45Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -41,9 +41,10 @@
     </parent>
     
     <artifactId>BetterBeansBinding-core</artifactId>
+    <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <version>1.2.3-SNAPSHOT</version>
     <name>BetterBeansBinding Core</name>
+
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
@@ -56,13 +57,23 @@
             <version>1.3.8</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
+
 
