--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 64 2009-06-11 20:47:20Z fabriziogiudici $
+ * $Id: pom.xml 69 2009-06-12 17:36:45Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -37,7 +37,7 @@
     <groupId>org.jdesktop.betterbeansbinding</groupId>
     <artifactId>BetterBeansBinding</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.3-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <name>BetterBeansBinding</name>
 
     <url>http://betterbeansbinding.kenai.com</url>
@@ -47,7 +47,7 @@
         <url>http://www.tidalwave.it</url>
     </organization>
     <inceptionYear>2009</inceptionYear>
-    
+
     <issueManagement>
         <system>Jira</system>
         <url>http://kenai.com/jira/browse/BETTERBEANSBINDING</url>
@@ -103,7 +103,7 @@
 
     <licenses>
         <license>
-            <name>LGPL 2.1 </name>
+            <name>LGPL 2.1</name>
             <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
             <distribution>repo</distribution>
         </license>
@@ -115,7 +115,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <debug>on</debug>
+                    <debug>true</debug>
                     <source>1.5</source>
                     <target>1.5</target>
                     <showDeprecation>true</showDeprecation>
@@ -142,30 +142,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-<!--
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                    <instrumentation>
-                    </instrumentation>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>cobertura</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
--->
         </plugins>
     </build>
 
@@ -186,19 +162,6 @@
 
     <reporting>
         <plugins>
-<!--
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                </configuration>
-            </plugin>
--->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
@@ -242,3 +205,4 @@
     </modules>
 
 </project>
+
