--- a/build.xml
+++ b/build.xml
@@ -25,34 +25,41 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: build.xml 51 2009-04-25 22:55:11Z fabriziogiudici $
+ * $Id: build.xml 82 2009-06-13 09:52:57Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project name="betterbeansbinding" default="default" basedir="." xmlns:j2seproject3="http://www.netbeans.org/ns/j2se-project/3">
     <description>Builds, tests, and runs the project beansbinding.</description>
+
+    <property name="version" value="1.3.0"/>
+    <property name="onejar" value="OneJar/target/BetterBeansBinding-OneJar-${version}-SNAPSHOT.jar"/>
 
     <target name="-init-sigtest">
         <taskdef name="setup-sigtest" classname="com.sun.tdk.signaturetest.ant.ASetup" classpath="lib/sigtestdev.jar"/>
         <taskdef name="sigtest" classname="com.sun.tdk.signaturetest.ant.ATest" classpath="lib/sigtest.jar"/>
     </target>
 
-    <target name="setup-sigtest" depends="-init-sigtest">
-        <setup-sigtest failonerror="true" apiVersion="openapi-v2" filename="core/src/main/etc/betterbeansbinding-core-v1.2.2.sig">
+    <target name="generate-sig" depends="-init-sigtest">
+        <setup-sigtest failonerror="true" apiVersion="openapi-v2" filename="core/src/main/etc/betterbeansbinding-core-v${version}.sig">
             <package name="org.jdesktop.beansbinding" />
             <package name="org.jdesktop.beansbinding.ext" />
             <package name="org.jdesktop.observablecollections" />
+            <exclude package="org.jdesktop.beansbinding.util" />
+            <exclude package="org.jdesktop.beansbinding.util.logging" />
             <classpath>
                 <pathelement location="${java.home}/lib/rt.jar"/>
-                <pathelement location="jar/target/BetterBeansBinding-1.2.3-SNAPSHOT.jar"/>
+                <pathelement location="${java.home}/../Classes/classes.jar"/>
+                <pathelement location="${onejar}"/>
             </classpath>
         </setup-sigtest>
-        <setup-sigtest failonerror="true" apiVersion="openapi-v2" filename="core/src/main/etc/betterbeansbinding-swing-v1.2.2.sig">
+        <setup-sigtest failonerror="true" apiVersion="openapi-v2" filename="core/src/main/etc/betterbeansbinding-swing-v${version}.sig">
             <package name="org.jdesktop.swingbinding" />
             <package name="org.jdesktop.swingbinding.adapters" />
             <exclude package="org.jdesktop.swingbinding.impl" />
             <classpath>
                 <pathelement location="${java.home}/lib/rt.jar"/>
-                <pathelement location="jar/target/BetterBeansBinding-1.2.3-SNAPSHOT.jar"/>
+                <pathelement location="${java.home}/../Classes/classes.jar"/>
+                <pathelement location="${onejar}"/>
             </classpath>
         </setup-sigtest>
     </target>
@@ -63,9 +70,12 @@
             <package name="org.jdesktop.beansbinding" />
             <package name="org.jdesktop.beansbinding.ext" />
             <package name="org.jdesktop.observablecollections" />
+            <exclude package="org.jdesktop.beansbinding.util" />
+            <exclude package="org.jdesktop.beansbinding.util.logging" />
             <classpath>
                 <pathelement location="${java.home}/lib/rt.jar"/>
-                <pathelement location="jar/target/BetterBeansBinding-jar-1.2.3-SNAPSHOT.jar"/>
+                <pathelement location="${java.home}/../Classes/classes.jar"/>
+                <pathelement location="${onejar}"/>
             </classpath>
         </sigtest>
         <sigtest failonerror="false" apiVersion="openapi-v2" filename="core/src/main/etc/betterbeansbinding-swing-v1.2.2.sig" backward="true" output="target/sigtest-swing-report.txt">
@@ -74,7 +84,8 @@
             <exclude package="org.jdesktop.swingbinding.impl" />
             <classpath>
                 <pathelement location="${java.home}/lib/rt.jar"/>
-                <pathelement location="jar/target/BetterBeansBinding-jar-1.2.3-SNAPSHOT.jar"/>
+                <pathelement location="${java.home}/../Classes/classes.jar"/>
+                <pathelement location="${onejar}"/>
             </classpath>
         </sigtest>
     </target>
