--- a/c/pom.xml
+++ b/c/pom.xml
@@ -25,43 +25,55 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: build.xml 51 2009-04-25 22:55:11Z fabriziogiudici $
+ * $Id: pom.xml 85 2009-06-14 08:05:21Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
-<project name="betterbeansbinding" default="default" basedir="." xmlns:j2seproject3="http://www.netbeans.org/ns/j2se-project/3">
-    <description>Builds, tests, and runs the project beansbinding.</description>
-    <import file="_nbproject/build-impl.xml"/>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <property name="tools.dir" value="${basedir}/tools"/>
+    <modelVersion>4.0.0</modelVersion>
 
-    <!-- import file="${tools.dir}/ant/openbluesky.xml"/ -->
+    <parent>
+        <groupId>org.jdesktop.betterbeansbinding</groupId>
+        <artifactId>BetterBeansBinding</artifactId>
+        <version>1.3.0-SNAPSHOT</version>
+    </parent>
+    
+    <artifactId>BetterBeansBinding-core</artifactId>
+    <version>1.3.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>BetterBeansBinding Core</name>
 
-    <target name="build" depends="jar"/>
+    <dependencies>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-EL</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+    </dependencies>
 
-    <target name="-post-init">
-        <property name="javac.debug" value="on"/>
-    </target>
-    <target name="dist" depends="javadoc,jar">
-        <property name="buildVersion" value="1.2.2"/>
-        <zip destfile="${dist.dir}/${ant.project.name}-${buildVersion}-doc.zip"
-         basedir="${dist.javadoc.dir}"/>
-        <zip destfile="${dist.dir}/${ant.project.name}-${buildVersion}-src.zip" >
-            <fileset dir="." >
-                <include name="${src.dir}/**" />
-                <exclude name="**/CVS/**" />
-            </fileset>
-            <fileset dir=".">
-                <include name="nbproject/build-impl.xml" />
-                <include name="nbproject/project.xml" />
-                <include name="nbproject/genfiles.properties" />
-                <include name="nbproject/project.properties" />
-                <include name="build.xml" />
-                <include name="license.txt" />
-                <include name="releaseNotes.txt" />
-            </fileset>
-        </zip>
-        <copy file="${dist.dir}/${ant.project.name}.jar"
-          tofile="${dist.dir}/${ant.project.name}-${buildVersion}.jar"/>
-    </target>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <debug>true</debug>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
+
+
