--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 85 2009-06-14 08:05:21Z fabriziogiudici $
+ * $Id: pom.xml 90 2009-06-15 21:29:47Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -43,6 +43,7 @@
     <artifactId>BetterBeansBinding-core</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <!-- packaging>nbm</packaging -->
     <name>BetterBeansBinding Core</name>
 
     <dependencies>
@@ -64,6 +65,12 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>nbm-maven-plugin</artifactId>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
