--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 90 2009-06-15 21:29:47Z fabriziogiudici $
+ * $Id: pom.xml 91 2009-06-15 21:54:00Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -42,8 +42,7 @@
     
     <artifactId>BetterBeansBinding-core</artifactId>
     <version>1.3.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <!-- packaging>nbm</packaging -->
+    <packaging>nbm</packaging>
     <name>BetterBeansBinding Core</name>
 
     <dependencies>
@@ -55,31 +54,12 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>1.3.8</version>
+            <version>1.3.7</version>
+            <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
         </dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>nbm-maven-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
-                <configuration>
-                    <debug>true</debug>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 </project>
 
