--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 69 2009-06-12 17:36:45Z fabriziogiudici $
+ * $Id: pom.xml 91 2009-06-15 21:54:00Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -41,24 +41,8 @@
     </parent>
     <version>1.3.0-SNAPSHOT</version>
     <artifactId>BetterBeansBinding-EL</artifactId>
-    <packaging>jar</packaging>
+    <packaging>nbm</packaging>
     <name>BetterBeansBinding EL</name>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
-                <configuration>
-                    <debug>true</debug>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
 
