--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 91 2009-06-15 21:54:00Z fabriziogiudici $
+ * $Id: pom.xml 93 2009-06-15 23:12:16Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -42,7 +42,8 @@
     
     <artifactId>BetterBeansBinding-core</artifactId>
     <version>1.3.0-SNAPSHOT</version>
-    <packaging>nbm</packaging>
+    <packaging>jar</packaging>
+    <!-- packaging>nbm</packaging -->
     <name>BetterBeansBinding Core</name>
 
     <dependencies>
@@ -58,9 +59,6 @@
             <!-- WARNING: don't use 1.3.8, it has got a broken pom which brings is tons of useless stuff! -->
         </dependency>
     </dependencies>
-
-    <build>
-    </build>
 </project>
 
 
