--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 91 2009-06-15 21:54:00Z fabriziogiudici $
+ * $Id: pom.xml 93 2009-06-15 23:12:16Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -41,7 +41,8 @@
     </parent>
     <version>1.3.0-SNAPSHOT</version>
     <artifactId>BetterBeansBinding-EL</artifactId>
-    <packaging>nbm</packaging>
+    <!-- packaging>nbm</packaging-->
+    <packaging>jar</packaging>
     <name>BetterBeansBinding EL</name>
 
 </project>
