--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 91 2009-06-15 21:54:00Z fabriziogiudici $
+ * $Id: pom.xml 93 2009-06-15 23:12:16Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -42,8 +42,10 @@
     
     <artifactId>BetterBeansBinding-SwingBinding</artifactId>
     <version>1.3.0-SNAPSHOT</version>
-    <packaging>nbm</packaging>
+    <packaging>jar</packaging>
+    <!-- packaging>nbm</packaging -->
     <name>BetterBeansBinding SwingBinding</name>
+
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
