--- a/CoberturaMerge/pom.xml
+++ b/CoberturaMerge/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 100 2009-06-20 10:19:48Z fabriziogiudici $
+ * $Id: pom.xml 101 2009-06-20 14:06:48Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -42,10 +42,39 @@
     
     <artifactId>BetterBeansBinding-CoberturaMerge</artifactId>
     <version>1.3.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>Generate Merged Cobertura Report</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-core</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-EL</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-SwingBinding</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
+            <plugin> <!-- disabled -->
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>bundle-manifest</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
@@ -80,23 +109,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-core</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-EL</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-SwingBinding</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 
 </project>
